# ChangeLog for net-libs/libpcap
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.119 2009/05/26 08:48:31 jer Exp $

*libpcap-1.0.0-r2 (26 May 2009)

  26 May 2009; Jeroen Roovers <jer@gentoo.org> +libpcap-1.0.0-r2.ebuild,
  +files/libpcap-1.0.0-freebsd-pic.patch:
  Build -fPIC on FreeBSD too (thanks to Timothy Redaelli, bug #262060).

  12 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  libpcap-1.0.0-r1.ebuild:
  List net-wireless/bluez first in ( a b ) dependency w.r.t. bug 269519.

  01 Mar 2009; Tiziano Müller <dev-zero@gentoo.org>
  libpcap-1.0.0-r1.ebuild:
  Added net-wireless/bluez as possible dep for bluetooth

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> libpcap-1.0.0-r1.ebuild:
  Add back s390 #247076.

  28 Nov 2008; Alexis Ballier <aballier@gentoo.org> libpcap-1.0.0-r1.ebuild:
  keyword ~x86-fbsd, bug #247076

*libpcap-1.0.0-r1 (16 Nov 2008)

  16 Nov 2008; Peter Volkov <pva@gentoo.org>
  +files/libpcap-1.0.0-LDFLAGS.patch,
  +files/libpcap-1.0.0-cross-linux.patch,
  +files/libpcap-1.0.0-install-bindir.patch,
  +files/libpcap-1.0.0-install-headers.patch,
  +files/libpcap-1.0.0-optional-bluetooth.patch, -libpcap-0.9.8.ebuild,
  -libpcap-0.9.8-r1.ebuild, +libpcap-1.0.0-r1.ebuild:
  Fixed library soname, added possibility to build with bluetooth support
  (dropped m68k mips s390 sparc-fbsd x86-fbsd). Removed unused.

*libpcap-1.0.0 (08 Nov 2008)

  08 Nov 2008; Cédric Krier <cedk@gentoo.org>
  +files/libpcap-1.0.0-bindir.patch, +files/libpcap-1.0.0-whitespace.patch,
  +libpcap-1.0.0.ebuild:
  Version bump

  28 Oct 2008; Raúl Porcel <armin76@gentoo.org> libpcap-0.9.8-r2.ebuild:
  alpha/ia64 stable #244234

  28 Oct 2008; Brent Baude <ranger@gentoo.org> libpcap-0.9.8-r2.ebuild:
  stable ppc64, bug 244234

  26 Oct 2008; Jeroen Roovers <jer@gentoo.org> libpcap-0.9.8-r2.ebuild:
  Stable for HPPA (bug #244234).
