@@ -14,9 +14,9 @@ AUX libpcap-1.0.0-whitespace.patch 679 RMD160 6a62d2e5737a8627e43b853a687b31c5b4
 AUX libpcap-cross-linux.patch 1114 RMD160 e76fd1ea94d34e8533416c476d95166ad13579ec SHA1 0853cb1cf102c6d9b41d22b4c62b0e1bac6d73a8 SHA256 4b3fe1e2b7ecefbf82e20120f8c3bf9c5050cb7ccc1e0be77a04af5ef7cbb459
 DIST libpcap-0.9.8.tar.gz 520526 RMD160 2f5ecbc9840d8bd646798c977b7a02abe191311e SHA1 11dfe67cfc1c279c7346d626a99ad4ba90621028 SHA256 c4158398de4411627b14f52626e4cef39443f4d5c1b9bce8c07f8526d18362f9
 DIST libpcap-1.0.0.tar.gz 524273 RMD160 20857fe6af5dc70fffb19da46e0fee908f55b3ea SHA1 9893654027ae11033d785045ff35583da43fe8fa SHA256 a214c4e1d7e22a758f66fe1d08f0ce41c3ba801a4c13dd1188e1e38288ac73c0
+DIST libpcap-1.0.1-20090616.tar.gz 591419 RMD160 9d5c01f703191efef76b02bafd8ae9af2a5a77ca SHA1 ce647384280b00703f49774a18c7fc6e97a86782 SHA256 1cca9d33c695d85b97d4e80dbaf84503beea5a5a6dcc88d3e122d4b1530a4035
 EBUILD libpcap-0.9.8-r2.ebuild 2133 RMD160 561702a9242341f75c35c0e32e24a83ab807bc75 SHA1 f5744690ea0237d9d9eec4df15f2bd02d6d1846d SHA256 d63cc1f5430dc2726120bc779af642f9acfca0cb742c6ceecda68d7513c55ed2
-EBUILD libpcap-1.0.0-r1.ebuild 1756 RMD160 8e1af2102e4e5c137c84cddd0d361fd864a02bbd SHA1 db0dc0e40676ea9ba1c269af98cb58e62024995a SHA256 e602fcf4c56a396cc57fcdc83a279d570a52e5f2495d382d77adfe905733902f
 EBUILD libpcap-1.0.0-r2.ebuild 1796 RMD160 67d522f12e4755a9b18365f8609ef6dbbf4664f8 SHA1 7c699851a24d3c625d97ce2fffcaa9169c358462 SHA256 2b7ae92d5c87227941470bf4c805e8abe7b750d71a10883d9af836fe7bcf934f
-EBUILD libpcap-1.0.0.ebuild 2076 RMD160 2f49a7b3508f6eb68d5bd6ed4743b9f560513e50 SHA1 1925f7b4bd110fc246bb01a67830102a8b327be0 SHA256 f96dd509d8ba7ba89658cfb1c5ee8bd4bb7f25826f1fef79a77b4e9f71107633
-MISC ChangeLog 15547 RMD160 d1a14552619b441dc720908ee942ff0e7afc7457 SHA1 6e2797d4ee2b75e097ed7aaf7fc2222c807a31cd SHA256 7ae6c5c99ad46e3831c1a6f54aa6eea7d644daff29a96d9ae021cb972d273e79
+EBUILD libpcap-1.0.1_pre20090616.ebuild 1716 RMD160 0c621113b4a9df43ecf5250b7bb41119084a0a88 SHA1 cab409ce109610460fb126b8b8816caa8b1ee190 SHA256 355b35b5a7e2ae2e3244176a7f656f362558569c4610db885cd364340ee97d37
+MISC ChangeLog 15894 RMD160 9228fd49985fedd2708cb6c40edc6e9cd3af75ef SHA1 7ec2a51a122c370bb15642fe0c3074c7513206a4 SHA256 f8e63f8f91a7f821c88a85b48547c913c39768b229db694c0fb4dc9b3d285805
 MISC metadata.xml 261 RMD160 5bcf72e234ef387b24ffb9221623eaf927a41f02 SHA1 31a589dbbde4597dc3df248c57b5213889c67423 SHA256 92d6c306fe13ead877997b8ff3007ffa601a1e7c96ca3ec2208f88884a95c791
